Parser funcional de String -> Json Object

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
   
   <build>
+      <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
