Agrego cobertura y una regla de gitignore que falta

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ hs_err_pid*
 
 .idea/replstate.xml
 
+*.iml
 # Crashlytics plugin (for Android Studio and IntelliJ)
 
 com_crashlytics_export_strings.xml
