--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,13 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-        </plugins>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>2.0.3</version>
+      </plugin>
+    </plugins>
+
     </build>
 
     <reporting>
