--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
         <version>2.0.3</version>
       </plugin>
     </plugins>
+        
+      <plugins>
+        <plugin>
+          <groupId>com.heroku.sdk</groupId>
+          <artifactId>heroku-maven-plugin</artifactId>
+          <configuration>
+            <appName>${heroku.tp-dds-2018}</appName>
+          </configuration>
+        </plugin>
+      </plugins>
+
+        
 
     </build>
 
