--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<version>3.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+
 	</dependencies>
 
 
