--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,18 @@
 			<version>5.1.26</version>
 		</dependency>
 
+		<!-- spark -->
+	    <dependency>
+		    <groupId>com.sparkjava</groupId>
+	        <artifactId>spark-core</artifactId>
+	        <version>2.5</version>
+	    </dependency>
 
-
+	    <dependency>
+		 	<groupId>org.slf4j</groupId>
+	    	<artifactId>slf4j-simple</artifactId>
+	    	<version>1.7.21</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
