--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,19 @@
 	    <dependency>
 		    <groupId>com.sparkjava</groupId>
 	        <artifactId>spark-core</artifactId>
-	        <version>2.5</version>
+	        <version>2.7.2</version>
 	    </dependency>
 
 	    <dependency>
 		 	<groupId>org.slf4j</groupId>
 	    	<artifactId>slf4j-simple</artifactId>
 	    	<version>1.7.21</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.sparkjava</groupId>
+		    <artifactId>spark-template-handlebars</artifactId>
+		    <version>2.7.1</version>
 		</dependency>
 
 		<dependency>
