--- a/pom.xml
+++ b/pom.xml
@@ -39,17 +39,35 @@
 	        <artifactId>spark-core</artifactId>
 	        <version>2.7.2</version>
 	    </dependency>
-
-	    <dependency>
-		 	<groupId>org.slf4j</groupId>
-	    	<artifactId>slf4j-simple</artifactId>
-	    	<version>1.7.21</version>
-		</dependency>
 		
 		<dependency>
 		    <groupId>com.sparkjava</groupId>
 		    <artifactId>spark-template-handlebars</artifactId>
 		    <version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-debug-tools</artifactId>
+			<version>0.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.jknack</groupId>
+			<artifactId>handlebars-helpers</artifactId>
+			<version>4.0.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.jknack</groupId>
+			<artifactId>handlebars-humanize</artifactId>
+			<version>4.0.6</version>
+		</dependency>
+
+	    <dependency>
+		 	<groupId>org.slf4j</groupId>
+	    	<artifactId>slf4j-simple</artifactId>
+	    	<version>1.7.21</version>
 		</dependency>
 
 		<dependency>
