--- a/pom.xml
+++ b/pom.xml
@@ -17,26 +17,26 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.2.13.Final</version>
+            <version>5.3.6.Final</version>
         </dependency>
         
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.2.13.Final</version>
+            <version>5.2.2.Final</version>
         </dependency>
         
-        <dependency>
-            <groupId>org.uqbar-project</groupId>
-            <artifactId>jpa-java8-extras</artifactId>
-            <version>1.0-alpha-1</version>
-        </dependency>
+        	<dependency>
+            		<groupId>org.uqbar-project</groupId>
+            		<artifactId>jpa-java8-extras</artifactId>
+            		<version>1.0-alpha-1</version>
+        	</dependency>
         
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.12</version>
-        </dependency>
+        	<dependency>
+            		<groupId>mysql</groupId>
+            		<artifactId>mysql-connector-java</artifactId>
+            		<version>8.0.12</version>
+        	</dependency>
 
 
 		<!-- driver jdbc -->
@@ -47,11 +47,11 @@
 		</dependency>
 
 		<!-- spark -->
-	    <dependency>
-		    <groupId>com.sparkjava</groupId>
-	        <artifactId>spark-core</artifactId>
-	        <version>2.7.2</version>
-	    </dependency>
+	    	<dependency>
+		    	<groupId>com.sparkjava</groupId>
+	        	<artifactId>spark-core</artifactId>
+	        	<version>2.7.2</version>
+	    	</dependency>
 		
 		<dependency>
 		    <groupId>com.sparkjava</groupId>
@@ -77,7 +77,7 @@
 			<version>4.0.6</version>
 		</dependency>
 
-	    <dependency>
+	    	<dependency>
 		 	<groupId>org.slf4j</groupId>
 	    	<artifactId>slf4j-simple</artifactId>
 	    	<version>1.7.21</version>
@@ -135,6 +135,62 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+                <execution>
+                    <id>copy-dependencies</id>
+                    <phase>package</phase>
+                    <goals><goal>copy-dependencies</goal></goals>
+                </execution>
+            </executions>
+        </plugin>
+			<plugin>
+   				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-surefire-plugin</artifactId>
+    				<version>2.12</version>
+    				<configuration>
+        				<forkMode>always</forkMode>
+    				</configuration>
+			</plugin>
+			<plugin>
+    				<groupId>com.heroku.sdk</groupId>
+    				<artifactId>heroku-maven-plugin</artifactId>
+    				<version>0.4.4</version>
+    				<configuration>
+        				<jdkVersion>1.8</jdkVersion>
+        				<!-- Use your own application name -->
+        				<appName>guarded-tor-91121</appName> 
+        				<processTypes>
+            				<!-- Tell Heroku how to launch your application -->
+            				<!-- You might have to remove the ./ in front   -->
+            				<web>java -jar ./target/my-app-1.0-jar-with-dependencies.jar</web>
+        				</processTypes>
+    				</configuration>
+			</plugin>
+			<plugin>
+            			<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-dependency-plugin</artifactId>
+            			<version>2.3</version>
+            			<executions>
+                			<execution>
+                    			<phase>package</phase>
+                    			<goals><goal>copy</goal></goals>
+                    			<configuration>
+                        			<artifactItems>
+                            			<artifactItem>
+                         			<groupId>com.github.jsimone</groupId>
+                        			<artifactId>webapp-runner</artifactId>
+                                			<version>8.0.30.2</version>
+                     				<destFileName>webapp-runner.jar</destFileName>
+                            			</artifactItem>
+                        			</artifactItems>
+                    			</configuration>
+                			</execution>
+            			</executions>
+        		</plugin>
 		</plugins>
 	</build>
 
